2009-12-19  Rik <octave@nomad.inbox5.com>

	* m4/module.mk, Makefile.am: Redo previous patch with distribution
	triggered by m4/module.mk.

2009-12-19  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Distribute m4/gnulib-cache.m4 per recommendation

2009-12-19  Rik <octave@nomad.inbox5.com>

	* Makefile.am, examples/Makefile.am, common.mk, configure.ac: Eliminate
	TOPDIR variable in favor of built-in automake variables of top_builddir
	and top_srcdir.

2009-12-19  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Use M4 quoting for arguments to autoconf macros containing
	variables

2009-12-19  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Fsize_equal): Allow calling with zero arguments.
	variables

2009-12-15  John W. Eaton  <jwe@octave.org>

	* README.MSVC: Delete section about obtaining glob library.
	* bootstrap.conf (gnulib_modules): Add fnmatch and glob to the list.
	* common.mk (LIBGLOB): Delete variable.
	(do_subst_config_vals): Don't substitute it.
	* octave-bug.in, octave-bug.cc.in: Eliminate LIBGLOB variable.
	* configure.ac: Don't check for glob.h or the glob and fnmatch
	functions.  Eliminate LIBGLOB variable.

2009-12-11  Rik <octave@nomad.inbox5.com>

	* HACKING: Elaborate which DIRNAME to use for --gnulib-srcdir option.

2009-12-11  John W. Eaton  <jwe@octave.org>

	* configure.ac: Add $PTHREAD_LIBS to $LIBS and $PTHREAD_CFLAGS
	to $CFLAGS for subsequent tests.

2009-12-11  Rik <octave@nomad.inbox5.com>

	* Makefile.am: remove install-extras target and use automake syntax to
	distribute NEWS file.
	* examples/Makefile.am: remove install-images target and use automake
	syntax to distribute image data.

2009-12-11  John W. Eaton  <jwe@octave.org>

	* .dir-locals.el: Correctly set indent-tabs-mode for ChangeLogs,
	and Makefiles.

	* common.mk (cp_update_rule): New macro.

2009-12-10  John W. Eaton  <jwe@octave.org>

	* mkoctfile.in, mkoctfile.cc.in: If output file is specified and
	it does not end in output_ext, append output_ext.
