@@ -1,10 +1,15 @@
+dist_archlib_SCRIPTS = emacs/info-emacs-info emacs/info-emacs-octave-help
+
 EXTRA_DIST += \
   emacs/NEWS \
   emacs/README \
   emacs/TODO \
+  emacs/info-emacs-info \
+  emacs/info-emacs-octave-help \
   emacs/module.mk \
   emacs/octave-hlp.el \
   emacs/octave-inf.el \
   emacs/octave-mod.el \
   emacs/octave-tags \
   emacs/octave-tags.1
+
